--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -81,7 +81,7 @@
 
 
         try {
-            const response = await fetch("http://localhost:8080/api/login/" , {
+            const response = await fetch("http://localhost:8080/api/login/auth" , {
                 method: 'POST',
                 headers: {
                     'Content-Type' : 'application/json',
