--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,8 +23,8 @@
                 <a href="" class="nav-link">Kontakt</a>
             </div>
             <div class="sign-in-up-buttons">
-                <a href="http://localhost:8080/login" class="nav-link">Logowanie</a>
-                <a href="http://localhost:8080/register" class="nav-link">Rejestracja</a>
+                <a href="/login" class="nav-link">Logowanie</a>
+                <a href="/register" class="nav-link">Rejestracja</a>
             </div>
 
         </nav>
