--- a/src/main/resources/templates/organisation_profile_edit.html
+++ b/src/main/resources/templates/organisation_profile_edit.html
@@ -21,13 +21,13 @@
         <nav class="nav-menu">
             <div class="nav-links-container">
                 <a href="" class="nav-link">O nas</a>
-                <a href="" class="nav-link">Projekty</a>
+                <a href="/organisation/projects" class="nav-link">Projekty</a>
                 <a href="" class="nav-link">Organizacje</a>
                 <a href="" class="nav-link">Kontakt</a>
+                <a href="/organisation/project/create" class="nav-link">Stwórz projekt</a>
             </div>
             <div class="sign-in-up-buttons">
-                <a href="" class="nav-link">Stwórz projekt</a>
-                <a href="" class="nav-link">Profil</a>
+                <a href="/organisation/profile" class="nav-link">Profil</a>
                 <a href="" class="nav-link">Wyloguj</a>
             </div>
 
