--- a/src/main/resources/static/css/form-layout.css
+++ b/src/main/resources/static/css/form-layout.css
@@ -11,7 +11,7 @@
     box-shadow: 0.5em 0.5em 2em rgba(101,85,143,0.80);
 }
 
-.form  input, .form > select{
+.form  input, .form > select, .form > button, .form > textarea{
     width:60%;
     height:2em;
     border-radius:0.5em;
@@ -20,7 +20,28 @@
     box-shadow:inset rgba(0, 0, 0, 0.31) 3px 2px 5px, rgba(0, 0, 0, 0.23) 0px 0px 0px 0px inset;
 }
 
-.form > input[type="submit"] {
+.form input[type="file"] {
+    box-shadow: none;   
+}
+
+.form input#desc-long{
+    height:10rem;
+}
+
+.form input#task-desc {
+    height:5rem;
+}
+
+#tags_chosen {
+    width:60%;
+    height:2em;
+    border-radius:0.5em;
+    margin:0.5em 0;
+    border:0;
+    box-shadow:inset rgba(0, 0, 0, 0.31) 3px 2px 5px, rgba(0, 0, 0, 0.23) 0px 0px 0px 0px inset;
+}
+
+.form > input[type="submit"], .form > button, form button{
     color:white;
     background-color: rgba(101,85,143,1.0);
     cursor: pointer;
@@ -29,10 +50,17 @@
 
 }
 
-.form > input[type="submit"]:hover {
+.form > input[type="submit"]:hover, .form > button:hover {
     background-color: rgb(128, 107, 181);
 }
 
 .form > label {
     width:60%;
 }
+
+.form > textarea {
+    resize: none;
+    height:200px;
+}
+
+
