--- a/src/main/resources/static/css/main-layout.css
+++ b/src/main/resources/static/css/main-layout.css
@@ -14,7 +14,7 @@ body, html {
     top:0;
     background-color: rgba(115,124,211,1);
     background-image: linear-gradient(rgb(173, 178, 229),rgb(115,124,255) );
-    height:15%;
+    height:80px;
     border-radius: 0 0 50px 50px;
     display:flex;
     align-items: center;
@@ -24,7 +24,6 @@ body, html {
 }
 
 .logo-container {
-    display: inline-block;
     height:100%;
     border-radius:0 0 0 50px;
     flex-basis:8%;
@@ -34,13 +33,75 @@ body, html {
 }
 
 .logo-container > img {
-    width:60%;
-    height:60%;
-    margin-top:1em;
+    width:70%;
+    height:90%;
     margin-left:2em;
 }
 
 .nav-menu {
+    flex-basis: 92%;
+    display:grid;
+    grid-template-columns: 70% 30%;
+    justify-content: center;
+    padding-bottom:1em;
+}
+
+.nav-links-container {
+    display:flex;
+}
+
+.nav-links-container  a{
+    display: inline-block;
+    color:black;
+    text-decoration: none;
+    text-align:center;
+    flex: 1 1 0;
+    background-color: rgba(0,0,0,0);
+    border-radius:8px 8px 0 0;
+    margin : 0em 0.6em;
+    border-bottom:1px solid rgba(0, 0, 0, 0.35);
+    box-shadow: none;
+    transition: box-shadow 0.3s ease;
+    align-self: center;
+    padding-top:5%;
+}
+
+.nav-links-container a:hover{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px -40px 20px -20px inset;
+}
+
+.sign-in-up-buttons {
+    display: flex;
+    align-items:flex-start;
+    flex-direction: column;
+
+}
+.sign-in-up-buttons a {
+    display:inline-block;
+    color:black;
+    text-decoration: none;
+    flex: 1 1 0;
+    padding:0.4em 0.5em;
+    margin:0.2em;
+    width:200px;
+    color:white;
+    background-color: rgba(44, 44, 44,0);
+    border-left:1px solid rgba(0, 0, 0, 0.35);
+    box-shadow: none;
+    transition: box-shadow 0.3s ease;
+
+}
+
+.sign-in-up-buttons a:first-child {
+    margin-top:1em;
+
+}
+
+.sign-in-up-buttons a:hover {
+    box-shadow: rgba(0, 0, 0, 0.35) 70px 0px 36px -28px inset;
+}
+
+/*.nav-menu {
     flex-basis:92%;
     display: flex;
 }
@@ -74,7 +135,7 @@ body, html {
     width:100%;
     color:white;
     background-color: rgb(44, 44, 44);
-}
+}*/
 
 .section-line {
     width:80%;
