--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -24,8 +24,8 @@
                 <a href="" class="nav-link">Kontakt</a>
             </div>
             <div class="sign-in-up-buttons">
-                <a href="" class="nav-link">Logowanie</a>
-                <a href="" class="nav-link">Rejestracja</a>
+                <a href="/login" class="nav-link">Logowanie</a>
+                <a href="/register" class="nav-link">Rejestracja</a>
             </div>
 
         </nav>
