--- a/src/main/resources/templates/volunteer_project_desc.html
+++ b/src/main/resources/templates/volunteer_project_desc.html
@@ -18,12 +18,12 @@
         <nav class="nav-menu">
             <div class="nav-links-container">
                 <a href="" class="nav-link">O nas</a>
-                <a href="" class="nav-link">Projekty</a>
+                <a href="/volunteer/projects" class="nav-link">Projekty</a>
                 <a href="" class="nav-link">Organizacje</a>
                 <a href="" class="nav-link">Kontakt</a>
             </div>
             <div class="sign-in-up-buttons">
-                <a href="" class="nav-link">Profil</a>
+                <a href="/volunteer/profile" class="nav-link">Profil</a>
                 <a href="" class="nav-link">Wyloguj</a>
             </div>
 
