--- a/src/main/resources/templates/create_project.html
+++ b/src/main/resources/templates/create_project.html
@@ -46,70 +46,11 @@
 
     <main class="main">
 
-        <section class="tasks-container">
-    
-                <div class="tasks">
-
-                    <h1>Lista zadań</h1>
-    
-                    <div class="task">
-    
-                        <h2 class="task-tittle">Zadanie 1</h2>
-    
-                        <p class="task-desc">opis zadania</p>
-    
-                        <span class="priority">Priorytet - wysoki</span>
-    
-                    </div>
-    
-                    <div class="task">
-    
-                        <h2 class="task-tittle">Zadanie 1</h2>
-    
-                        <p class="task-desc">opis zadania</p>
-    
-                        <span class="priority">Priorytet - wysoki</span>
-    
-                    </div>
-    
-                    <div class="task">
-    
-                        <h2 class="task-tittle">Zadanie 1</h2>
-    
-                        <p class="task-desc">opis zadania</p>
-    
-                        <span class="priority">Priorytet - wysoki</span>
-    
-                    </div>
-    
-                </div>
-
-                <form action="" class="form">
-
-                    <label for="task-title">Tytuł</label>
-                    <input type="text" name="task-title" id="task-title" required>
-
-                    <label for="task-desc">Opis</label>
-                    <textarea name="task-desc" id="task-desc"></textarea>
-
-                    <label for="priority">Priorytet</label>
-                    <select name="priority" id="priority">
-
-                        <option value="val1">val1</option>
-                        <option value="val2">val2</option>
-                        <option value="val3">val3</option>
-    
-                    </select>
-
-                    <input type="submit" value="Dodaj zadanie do listy zadań">
-
-                </form>
-    
-        </section>
         
+
          <section class="form-container">
 
-            <form action="/api/project/create" method = "POST" class="form" enctype="multipart/form-data">
+            <form class="form" name="projectForm">
 
                 <label for="title">Tytuł</label>
                 <input type="text" name="title" id="title" required>
@@ -129,11 +70,74 @@
                 <label for="img">Obrazek</label>
                 <input type="file" name="img" id="img">
 
-                <input type="submit" value="Dodaj projekt">
+                <button type="button" onclick="createProject()">Dalej</button>
 
             </form>
 
         </section>
+
+        <section class="tasks-container" id = "tasks-container" style="display:none">
+    
+            <div class="tasks">
+
+                <h1>Lista zadań</h1>
+
+                <div class="task">
+
+                    <h2 class="task-tittle">Zadanie 1</h2>
+
+                    <p class="task-desc">opis zadania</p>
+
+                    <span class="priority">Priorytet - wysoki</span>
+
+                </div>
+
+                <div class="task">
+
+                    <h2 class="task-tittle">Zadanie 1</h2>
+
+                    <p class="task-desc">opis zadania</p>
+
+                    <span class="priority">Priorytet - wysoki</span>
+
+                </div>
+
+                <div class="task">
+
+                    <h2 class="task-tittle">Zadanie 1</h2>
+
+                    <p class="task-desc">opis zadania</p>
+
+                    <span class="priority">Priorytet - wysoki</span>
+
+                </div>
+
+            </div>
+
+            <form action="" class="form">
+
+                <label for="task-title">Tytuł</label>
+                <input type="text" name="task-title" id="task-title" required>
+
+                <label for="task-desc">Opis</label>
+                <textarea name="task-desc" id="task-desc"></textarea>
+
+                <label for="priority">Priorytet</label>
+                <select name="priority" id="priority">
+
+                    <option value="val1">val1</option>
+                    <option value="val2">val2</option>
+                    <option value="val3">val3</option>
+
+                </select>
+
+                <input type="submit" value="Dodaj zadanie do listy zadań">
+
+            </form>
+
+            <button type="button" id="create-project-button" style="width:20%">Gotowe</button>
+
+    </section>
 
     </main>
 
@@ -153,7 +157,37 @@
         $(".chosen-select").chosen();
         document.getElementById('tags_chosen').style.width = "";
         document.getElementsByClassName('chosen-search-input')[0].setAttribute('value',"Wybierz tagi");
-        document.getElementsByClassName('chosen-search-input')[0].setAttribute('placeholder',"chosen-search-input");
+        document.getElementsByClassName('chosen-search-input')[0].setAttribute('placeholder',"Wybierz tagi");
+
+        async function createProject(){
+
+            const form = document.forms["projectForm"];
+
+            const formData = new FormData(form);
+
+            const data = Object.fromEntries(formData.entries());
+
+            console.log(formData);
+
+            try {
+            const response = await fetch("http://localhost:8080/api/project/create" , {
+                method: 'POST',
+                body: formData
+            });
+
+            if (response.ok) {
+                const result = await response.text();
+                console.log(result);
+                document.getElementById("tasks-container").style.display = "grid";
+
+            } else {
+                console.log("Błąd odpowiedzi serwera ", (await response).status);
+            }
+        } catch (error) {
+            console.log(error);
+        }
+
+        }
 
     </script>
     
