--- a/src/main/resources/templates/organisation_home.html
+++ b/src/main/resources/templates/organisation_home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/volunteer-home.css">
     <title>Strona główna</title>
 </head>
-<body onload = "get()">
+<body onload = "getProjects()">
 
     <header class="header">
 
@@ -97,12 +97,12 @@
     </footer>
 
 
-    <script>
+    <script defer>
 
         var root1 = document.getElementsByClassName("projects-container")[0];
-        async function get() {
+        async function getProjects() {
             try {
-                const response = await fetch('getData', {
+                const response = await fetch('http://localhost:8080/api/project/organisation/all', {
                     method: 'GET',
                     headers: {
                         'Content-Type': 'application/json',
@@ -111,7 +111,7 @@
 
                 if (response.ok) {
                     const result = await response.json();
-                    result.forEach(person => {
+                    result.forEach(project => {
 
                         const projectDiv = document.createElement("div");
                         projectDiv.classList.add("project");
@@ -126,7 +126,8 @@
                         const textSection = document.createElement("section");
                         textSection.classList.add("text-container");
 
-                        textSection.innerHTML = ' <h2 class="project-tittle">' + person.firstName + ' </h2> <h4 class="project-short-desc">' + person.lastName + '</h4>';
+                        textSection.innerHTML = ' <h2 class="project-tittle">' + project.title + 
+                            ' </h2> <h4 class="project-short-desc">' + project.desc + '</h4>';
 
                         imgSection.appendChild(img);
                         projectDiv.appendChild(imgSection);
