feat: Add redirecting that depends on user's role

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -92,6 +92,11 @@
             if (response.ok) {
                 const result = await response.text();
                 console.log(result);
+                if (result === "VOLUNTEER") {
+                    location.href = "http://localhost:8080/volunteer/projects";
+                } else {
+                    location.href = "http://localhost:8080/organisation/projects"
+                }
             } else {
                 console.log("Błąd odpowiedzi serwera ", (await response).status);
             }
