--- a/src/main/resources/templates/organisation_home.html
+++ b/src/main/resources/templates/organisation_home.html
@@ -132,6 +132,7 @@
                 if (response.ok) {
                     const result = await response.json();
                     result.forEach(project => {
+                        console.log(project);
 
                         const projectDiv = document.createElement("div");
                         projectDiv.classList.add("project");
@@ -148,11 +149,21 @@
                         textSection.classList.add("text-container");
 
                         textSection.innerHTML = ' <h2 class="project-tittle">' + project.title + 
-                            ' </h2> <h4 class="project-short-desc">' + project.desc + '</h4>';
+                            ' </h2> <p class="project-short-desc">' + project['desc-long'] + '</p>';
+
+                        const tags = document.createElement("h4");
+                        tags.innerHTML = "Tagi: "
+                        for (let tag in project.tags) {
+                            console.log(tag);
+                            tags.innerHTML += "<span class=tag> [" + project.tags[tag].desc + "] </span>";
+                        }
+
+                        textSection.appendChild(tags);
                             
                         const projectButton = document.createElement("button");
                         projectButton.type = "button";
-                        projectButton.classList.add("project-desc-button")
+                        projectButton.classList.add("project-desc-button");
+                        projectButton.innerHTML = "Szczegóły";
                         
 
                         imgSection.appendChild(img);
