--- a/src/main/resources/templates/css/volunteer-home.css
+++ b/src/main/resources/templates/css/volunteer-home.css
@@ -47,6 +47,7 @@ div.project {
     -webkit-line-clamp: 5;      /* Liczba widocznych linii */
     text-overflow: ellipsis; 
     max-height: 300px;
+    white-space: normal;
 }
 
 .searchbar-container {
