--- a/src/main/resources/static/css/project-layout.css
+++ b/src/main/resources/static/css/project-layout.css
@@ -19,13 +19,12 @@
     text-align: center;
     margin:auto;
     height:80%;
-    
 }
 
 .project-img {
-    width:100%;
-    height:100%;
-    object-fit: cover;
+    width:300px;
+    height:300px;
+    object-fit: contain;
     border-radius:2em;
 }
 
