--- a/src/main/resources/templates/css/join-project.css
+++ b/src/main/resources/templates/css/join-project.css
@@ -31,10 +31,10 @@ section.project-container {
 }
 
 .project-img {
-    width:100%;
-    height:100%;
-    object-fit: cover;
-    border-radius:2em;
+    width:300px;
+    height:300px;
+    border-radius: 2em;
+    object-fit: contain;
 }
 
 .project-short-desc{
