--- a/src/main/resources/templates/css/volunteer-home.css
+++ b/src/main/resources/templates/css/volunteer-home.css
@@ -18,9 +18,10 @@ div.project {
 }
 
 .project-img {
-    width:80%;
+    width:300px;
+    height:300px;
     border-radius: 2em;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .text-container {
