chore: some image display tests

--- a/src/main/resources/templates/join_project.html
+++ b/src/main/resources/templates/join_project.html
@@ -40,7 +40,7 @@
 
                 <div class="img-container">
 
-                    <img src="images/logo2mini.jpg" alt="" class="project-img">
+                    <img src="images/strona-glowna.jfif" alt="" class="project-img">
 
                 </div>
 
