--- a/src/main/resources/templates/organisation_home.html
+++ b/src/main/resources/templates/organisation_home.html
@@ -13,7 +13,7 @@
     <header class="header">
 
         <div class="logo-container">
-            <img src="images/logo.png" alt="logo" class="logo">
+            <img src="/images/logo.png" alt="logo" class="logo">
         </div>
 
         <nav class="nav-menu">
@@ -49,7 +49,7 @@
             <div class="project">
 
                 <section class="img-container">
-                        <img src="images/logo2mini.jpg" alt="Zdjęcie projektu" class="project-img">
+                        <img src="/images/logo2mini.jpg" alt="Zdjęcie projektu" class="project-img">
                 </section>
 
                 <section class="text-container">
@@ -76,7 +76,7 @@
             <div class="project">
 
                 <section class="img-container">
-                        <img src="" alt="Zdjęcie projektu" class="project-img">
+                        <img src="/images/strona-glowna.jfif" alt="Zdjęcie projektu" class="project-img">
                 </section>
 
                 <section class="text-container">
@@ -141,7 +141,7 @@
                         imgSection.classList.add("img-container");
 
                         const img = document.createElement("img");
-                        img.src = project.imgPath
+                        img.src = project.imgPath;
                         img.alt = "zdjecie";
                         img.classList.add("project-img");
 
