--- a/src/main/resources/templates/organisation_home.html
+++ b/src/main/resources/templates/organisation_home.html
@@ -162,6 +162,7 @@
                             
                         const projectButton = document.createElement("button");
                         projectButton.type = "button";
+                        projectButton.dataset.projectId = project.id;
                         projectButton.classList.add("project-desc-button");
                         projectButton.innerHTML = "Szczegóły";
                         
