--- a/src/main/resources/templates/css/volunteer-home.css
+++ b/src/main/resources/templates/css/volunteer-home.css
@@ -18,10 +18,10 @@ div.project {
 }
 
 .project-img {
-    width:300px;
-    height:300px;
+    width:min(300px, 100%);
+    height:min(300px, 100%);
     border-radius: 2em;
-    object-fit: contain;
+    object-fit: fill;
 }
 
 .text-container {
