--- a/src/main/resources/templates/volunteer_home.html
+++ b/src/main/resources/templates/volunteer_home.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="/css/volunteer-home.css">
     <title>Strona główna</title>
 </head>
-<body onload = "get()">
+<body onload = "getProjects()">
 
     <header class="header">
 
         <div class="logo-container">
-            <img src="images/logotst.png" alt="logo" class="logo">
+            <img src="/images/logotst.png" alt="logo" class="logo">
         </div>
 
         <nav class="nav-menu">
@@ -48,7 +48,7 @@
             <div class="project">
 
                 <section class="img-container">
-                        <img src="images/logo2mini.jpg" alt="Zdjęcie projektu" class="project-img">
+                        <img src="/images/logo2mini.jpg" alt="Zdjęcie projektu" class="project-img">
                 </section>
 
                 <section class="text-container">
@@ -96,12 +96,12 @@
     </footer>
 
 
-    <script>
+    <script defer>
 
         var root1 = document.getElementsByClassName("projects-container")[0];
-        async function get() {
+        async function getProjects() {
             try {
-                const response = await fetch('getData', {
+                const response = await fetch('http://localhost:8080/api/project/all', {
                     method: 'GET',
                     headers: {
                         'Content-Type': 'application/json',
@@ -110,7 +110,8 @@
 
                 if (response.ok) {
                     const result = await response.json();
-                    result.forEach(person => {
+                    result.forEach(project => {
+                        console.log(project);
 
                         const projectDiv = document.createElement("div");
                         projectDiv.classList.add("project");
@@ -119,26 +120,39 @@
                         imgSection.classList.add("img-container");
 
                         const img = document.createElement("img");
+                        img.src = project.imgPath;
                         img.alt = "zdjecie";
                         img.classList.add("project-img");
 
                         const textSection = document.createElement("section");
                         textSection.classList.add("text-container");
 
-                        textSection.innerHTML = ' <h2 class="project-tittle">' + person.firstName + ' </h2> <h4 class="project-short-desc">' + person.lastName + '</h4>';
+                        textSection.innerHTML = ' <h2 class="project-tittle">' + project.title + 
+                            ' </h2> <p class="project-short-desc">' + project['desc-long'] + '</p>';
+
+                        const tags = document.createElement("h4");
+                        tags.innerHTML = "Tagi: "
+                        for (let tag in project.tags) {
+                            console.log(tag);
+                            tags.innerHTML += "<span class=tag> [" + project.tags[tag].desc + "] </span>";
+                        }
+
+                        textSection.appendChild(tags);
+                            
+                        const projectButton = document.createElement("button");
+                        projectButton.type = "button";
+                        projectButton.addEventListener("click" ,goToProjectDesc);
+                        projectButton.dataset.projectId = project.id;
+                        projectButton.classList.add("project-desc-button");
+                        projectButton.innerHTML = "Szczegóły";
+                        
 
                         imgSection.appendChild(img);
+                        textSection.appendChild(projectButton);
                         projectDiv.appendChild(imgSection);
                         projectDiv.appendChild(textSection);
                         root1.appendChild(projectDiv);
-
-
                     })
-
-
-                    /*for (const [key, val] of Object.entries(result)){
-                    console.log(key + ': ' + val);
-                }*/
 
                 } else {
                     console.log('Blad odpowiedzi serwera', response.body);
@@ -149,6 +163,14 @@
             }
 
         }
+
+
+        function goToProjectDesc(event) {
+
+            location.href = "http://localhost:8080/volunteer/projects/" + this.dataset.projectId;
+
+        }
+
     </script>
     
 </body>
