--- a/src/main/resources/templates/join_project.html
+++ b/src/main/resources/templates/join_project.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main-layout.css">
-    <link rel="stylesheet" href="css/form-layout.css">
-    <link rel="stylesheet" href="css/join-project.css">
+    <link rel="stylesheet" href="/css/main-layout.css">
+    <link rel="stylesheet" href="/css/form-layout.css">
+    <link rel="stylesheet" href="/css/join-project.css">
     <title>Strona główna</title>
 </head>
-<body>
+<body onload = "getProject()">
 
     <header class="header">
 
         <div class="logo-container">
-            <img src="images/logo.png" alt="logo" class="logo">
+            <img src="/images/logo.png" alt="logo" class="logo">
         </div>
 
         <nav class="nav-menu">
@@ -105,6 +105,38 @@
         <div class="footer-col4">col4</div>
 
     </footer>
+
+    <script defer>
+
+        const root = document.getElementsByClassName("project-container")[0];
+
+
+        async function getProject() {
+            const urlArray = window.location.href.split("/");
+            const projectId = urlArray.at(-1);
+
+            console.log(projectId);
+
+            try {
+                const response = await fetch('http://localhost:8080/api/project/volunteer/' + projectId, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
+
+                if (response.ok) {
+                    console.log(await response.json());
+                } else {
+                    console.log("blad serwera");
+                }
+
+            } catch (error) {
+                console.log(error);
+            }
+        }
+
+    </script>
     
 </body>
 </html>
