--- a/src/main/resources/templates/edit_project_tasks.html
+++ b/src/main/resources/templates/edit_project_tasks.html
@@ -146,7 +146,7 @@
             <form action="" class="form">
 
                 <label for="task-tittle">Tytuł</label>
-                <input type="text" name="task-tittle" id="taks-tittle" required>
+                <input type="text" name="task-tittle" id="task-tittle" required>
 
                 <label for="task-desc">Opis</label>
                 <input type="text" name="task-desc" id="task-desc">
@@ -186,23 +186,23 @@
                 <div class="volunteers">
     
                     <div class="volunteer">
-                        <span>J</span> Jan Kowalski    
+                        <span>J</span> Jan Kowalski <button type="button" class="add-volunteer-to-task-button">Dodaj</button> 
                     </div>
     
                     <div class="volunteer">
-                        <span>A</span> Jan Kowalski
+                        <span>A</span> Jan Kowalski <output>Dodany</output>
                     </div>
     
                     <div class="volunteer">
-                        <span>R</span> Jan Kowalski
+                        <span>R</span> Jan Kowalski <button type="button" class="add-volunteer-to-task-button">Dodaj</button>
                     </div>
     
                     <div class="volunteer">
-                        <span>F</span> Jan Kowalski
+                        <span>F</span> Jan Kowalski <button type="button" class="add-volunteer-to-task-button">Dodaj</button>
                     </div>
                     
                     <div class="volunteer">
-                        <span>G</span> Jan Kowalski
+                        <span>G</span> Jan Kowalski <button type="button" class="add-volunteer-to-task-button">Dodaj</button>
                     </div>
     
                 </div>
